--- a/views/landingLogin.ejs
+++ b/views/landingLogin.ejs
@@ -1,80 +1,88 @@
-<%- include header.ejs %>
+<html lang="en">
 
-<body>
-	<link rel="stylesheet" href="/css/landingLogin.css">
-	<div class="container">
-		<div id="headerText">
-			<div class="row">
-				<div class="col-lg-12">
-					<h1 id="brand">
-						PickUp
-					</h1>
-					<h3 id="motivation">
-						Connecting our campus, one activity at a time.
-					</h3>
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>PickUp</title>
+	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+	<link rel="stylesheet" href="https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css">
+
+	<body>
+		<link rel="stylesheet" href="/css/landingLogin.css">
+		<div class="container">
+			<div id="headerText">
+				<div class="row">
+					<div class="col-lg-12">
+						<h1 id="brand">
+							PickUp
+						</h1>
+						<h3 id="motivation">
+							Connecting our campus, one activity at a time.
+						</h3>
+					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-	<!-- carousel -->
+		<!-- carousel -->
 
-	<div class="carousel slide" data-interval="6000" data-ride="carousel">
-		<div class="carousel-inner">
-			<div class="carousel-item active image">
-				<img class="d-block w-100 carousel-img " src="https://images.unsplash.com/photo-1482195740274-e367dbcdb9c6?ixlib=rb-0.3.5&s=e4bd558d074bbe3c74ae67e3beaa88c8&auto=format&fit=crop&w=1489&q=80"
-				   alt="first slide ">
-			</div>
-			<div class="carousel-item image">
-				<img class="d-block w-100 carousel-img " src="https://images.unsplash.com/photo-1461748659110-16121c049d52?ixlib=rb-0.3.5&s=aa04a98ee857d3930a5bae9913db097c&auto=format&fit=crop&w=1050&q=80 "
-				   alt="second slide ">
-			</div>
-			<div class="carousel-item image ">
-				<img class="d-block w-100 carousel-img" src="https://images.unsplash.com/photo-1519205913750-9c627cff59dd?ixlib=rb-0.3.5&s=a6f623081b723d64b3913ae42471f4f2&auto=format&fit=crop&w=1094&q=80 "
-				   alt="third slide ">
-			</div>
-			<div class="carousel-item image ">
-				<img class="d-block w-100 carousel-img" src="https://images.unsplash.com/photo-1460132011327-1bcd44f7ae20?ixlib=rb-0.3.5&s=50179d7b514422f3641e5e044684435d&auto=format&fit=crop&w=1050&q=80 "
-				   alt="fourth slide ">
-			</div>
-			<div class="carousel-item image ">
-				<img class="d-block w-100 carousel-img" src="https://images.unsplash.com/photo-1499858476316-343e284f1f67?ixlib=rb-0.3.5&s=4985c13dbbf85d7d0f5b90df50ea8695&auto=forqmat&fit=crop&w=1050&q=80 "
-				   alt="fifth slide ">
+		<div class="carousel slide" data-interval="6000" data-ride="carousel">
+			<div class="carousel-inner">
+				<div class="carousel-item active image">
+					<img class="d-block w-100 carousel-img " src="https://images.unsplash.com/photo-1482195740274-e367dbcdb9c6?ixlib=rb-0.3.5&s=e4bd558d074bbe3c74ae67e3beaa88c8&auto=format&fit=crop&w=1489&q=80"
+					   alt="first slide ">
+				</div>
+				<div class="carousel-item image">
+					<img class="d-block w-100 carousel-img " src="https://images.unsplash.com/photo-1461748659110-16121c049d52?ixlib=rb-0.3.5&s=aa04a98ee857d3930a5bae9913db097c&auto=format&fit=crop&w=1050&q=80 "
+					   alt="second slide ">
+				</div>
+				<div class="carousel-item image ">
+					<img class="d-block w-100 carousel-img" src="https://images.unsplash.com/photo-1519205913750-9c627cff59dd?ixlib=rb-0.3.5&s=a6f623081b723d64b3913ae42471f4f2&auto=format&fit=crop&w=1094&q=80 "
+					   alt="third slide ">
+				</div>
+				<div class="carousel-item image ">
+					<img class="d-block w-100 carousel-img" src="https://images.unsplash.com/photo-1460132011327-1bcd44f7ae20?ixlib=rb-0.3.5&s=50179d7b514422f3641e5e044684435d&auto=format&fit=crop&w=1050&q=80 "
+					   alt="fourth slide ">
+				</div>
+				<div class="carousel-item image ">
+					<img class="d-block w-100 carousel-img" src="https://images.unsplash.com/photo-1499858476316-343e284f1f67?ixlib=rb-0.3.5&s=4985c13dbbf85d7d0f5b90df50ea8695&auto=forqmat&fit=crop&w=1050&q=80 "
+					   alt="fifth slide ">
+				</div>
 			</div>
 		</div>
-	</div>
 
 
-	<div class="container">
-		<div class="col-lg-12">
-			<div class=" row ">
-				<div id="myCard " class="card w-75 ">
-					<!-- Form input(posts) Sign up for account -->
-					<form action="/login" method="post">
-						<div class="form-group ">
-							<label for="EmailInput ">Email</label>
-							<input type="email " name="email" placeholder="Email" class="form-control " id="emailInput" aria-describedby="emailHelp "
-							   required>
-						</div>
-						<div class="form-group ">
-							<label for="Passwordinput ">Password</label>
-							<input type="password" name="password" class="form-control " id="passwordInput" placeholder="Password " required>
-							<div class="float-right spacing">
-								<button id="login" type="submit" class="btn btn-primary btn-md active ">Log-in</button>
-								<!-- this redirects to signup page -->
-								<label for="signupRedirect">OR </label>
-								<a href="/signUp" class="btn btn-primary btn-md active btn-default">Sign-up!</a>
+		<div class="container">
+			<div class="col-lg-12">
+				<div class=" row ">
+					<div id="myCard " class="card w-75 ">
+						<!-- Form input(posts) Sign up for account -->
+						<form action="/login" method="post">
+							<div class="form-group ">
+								<label for="EmailInput ">Email</label>
+								<input type="email " name="email" placeholder="Email" class="form-control " id="emailInput" aria-describedby="emailHelp "
+								   required>
 							</div>
-						</div>
-					</form>
+							<div class="form-group ">
+								<label for="Passwordinput ">Password</label>
+								<input type="password" name="password" class="form-control " id="passwordInput" placeholder="Password " required>
+								<div class="float-right spacing">
+									<button id="login" type="submit" class="btn btn-primary btn-md active ">Log-in</button>
+									<!-- this redirects to signup page -->
+									<label for="signupRedirect">OR </label>
+									<a href="/signUp" class="btn btn-primary btn-md active btn-default">Sign-up!</a>
+								</div>
+							</div>
+						</form>
+					</div>
 				</div>
 			</div>
+
 		</div>
+		<script src="../clientjs/passwordValidate.js"></script>
+		<%- include footer.ejs %>
 
-	</div>
-	<script src="../clientjs/passwordValidate.js"></script>
-<%- include footer.ejs %>
-
-<!--
+			<!--
       https://unsplash.com/photos/dybZ3jXtYUo
       https://unsplash.com/photos/eilPz30MSUo
       https://unsplash.com/photos/DswQ6jBW3_0
