--- a/views/ProfilePage.ejs
+++ b/views/ProfilePage.ejs
@@ -47,9 +47,9 @@
                                     </button>
 
                                     <br>
-                                    <button type="button" class="btn btn-primary">
+                                    <a href='/schedule' class="btn btn-primary">
                                         View/Edit Schedule
-                                    </button>
+                                    </a>
 
 
 
