--- a/views/landingLogin.ejs
+++ b/views/landingLogin.ejs
@@ -7,7 +7,7 @@
 	<title>PickUp</title>
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 	<link rel="stylesheet" href="https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css">
-
+</head>
 	<body>
 		<link rel="stylesheet" href="/css/landingLogin.css">
 		<div class="container">
