--- a/views/signUp.ejs
+++ b/views/signUp.ejs
@@ -1,5 +1,13 @@
-<%- include header.ejs %>
+<html lang="en">
 
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>PickUp</title>
+	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+	<link rel="stylesheet" href="https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css">
+</head>
 <body>
 	<link rel="stylesheet" href="/css/landingLogin.css">
 	<div class="container">
