Preventive coding for invalid login and signup

--- a/views/landingLogin.ejs
+++ b/views/landingLogin.ejs
@@ -8,6 +8,13 @@
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 	<link rel="stylesheet" href="https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css">
 </head>
+
+<%
+  // Set default values
+  locals.email = locals.email || "";
+  locals.loginMsg = locals.loginMsg || "";
+%>
+
 	<body>
 		<link rel="stylesheet" href="/css/landingLogin.css">
 		<div class="container">
@@ -73,6 +80,10 @@
 									<a href="/signUp" class="btn btn-primary btn-md active btn-default">Sign-up!</a>
 								</div>
 							</div>
+							<hr>
+							<% if (loginMsg) { %>
+								<span style="color:red"><%= loginMsg %></span>
+							<% } %>
 						</form>
 					</div>
 				</div>
