Made scheduling more intuitive

--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -21,8 +21,8 @@
 
 
     <div class="container">
-      <div class="wrapper">
-        Here is your schedule:
+      <div class="wrapper" >
+        <font size = "5"> Plan out your interests by entering them into the calendar. Your profile will be updated automatically. </font>
         <div id="myScheduler"></div>
       </div>
     </div>
