Changed button layouts and added notes to help user

--- a/views/ProfilePage.ejs
+++ b/views/ProfilePage.ejs
@@ -42,13 +42,9 @@
                                 <!-- Split button -->
                                 <div class="btn-group">
 
-                                    <button type="button" class="btn btn-primary" style="padding-left:50px;">
-                                        Edit Interests
-                                    </button>
 
-                                    <br>
-                                    <a href='/schedule' class="btn btn-primary">
-                                        View/Edit Schedule
+                                    <a href='/schedule' class="btn btn-primary" style="padding-left:50px;">
+                                        View Interests and Edit Schedule
                                     </a>
 
 
