--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -22,7 +22,7 @@
 
     <div class="container">
       <div class="wrapper" >
-        <font size = "5"> Plan out your interests by entering them into the calendar. Your profile will be updated automatically. </font>
+        <font size = "4"> Plan out your interests by entering them into the timeslots during which you are available for the activity. Your profile will be updated automatically. </font>
         <div id="myScheduler"></div>
       </div>
     </div>
