--- a/views/header.ejs
+++ b/views/header.ejs
@@ -31,6 +31,11 @@
 						<li class="nav-item ">
 							<a class="nav-link " href="/schedule">My Schedule</a>
 						</li>
+
+						<li class="nav-item ">
+							<a class="nav-link " href="/matches">Scan/View Matches</a>
+						</li>
+
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
 							   aria-expanded="false">
