--- a/views/chatroom.ejs
+++ b/views/chatroom.ejs
@@ -1,5 +1,6 @@
 <%- include header.ejs %>
 
+<p id="idid" style="display:none"><%= emailid %></p>
 <script src="/socket.io/socket.io.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
 <script>
@@ -27,12 +28,14 @@
       }
     }
   })
+
 	var socket = io.connect('http://localhost:8080');
 	// on connection to server, ask for user's name with an anonymous callback
 	socket.on('connect', function(){
 		// call the server-side function 'adduser' and send one parameter (value of prompt)
-    console.log(window.urname);
-		socket.emit('adduser', window.urname);
+    //console.log(window.urname);
+
+		socket.emit('adduser', window.urname , $('#idid').text());
 	});
 
 	// listener, whenever the server emits 'updatechat', this updates the chat body
@@ -77,7 +80,7 @@
 	});
 
 </script>
-<div style="float:left;width:100px;border-right:1px solid black;height:300px;padding:10px;overflow:scroll-y;">
+<div style="display:none;float:left;width:100px;border-right:1px solid black;height:300px;padding:10px;overflow:scroll-y;">
 	<b>ROOMS</b>
 	<div id="rooms"></div>
 </div>
