--- a/views/header.ejs
+++ b/views/header.ejs
@@ -36,6 +36,10 @@
 							<a class="nav-link " href="/matches">Scan/View Matches</a>
 						</li>
 
+						<li class="nav-item ">
+							<a class="nav-link " href="/chatroom">Chatroom</a>
+						</li>
+
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
 							   aria-expanded="false">
