--- a/views/header.ejs
+++ b/views/header.ejs
@@ -33,7 +33,7 @@
 						</li>
 
 						<li class="nav-item ">
-							<a class="nav-link " href="/matches">Scan/View Matches</a>
+							<a class="nav-link " href="/matches">Scan</a>
 						</li>
 
 						<li class="nav-item ">
