--- a/views/chatroom.ejs
+++ b/views/chatroom.ejs
@@ -7,6 +7,7 @@
   $.ajax({
     url: '/loggedIn',
     type: 'GET',
+    async: false,
     success: function(result) {
       if (result) {
         window.urname = result.username;
