report: auto-complete: Get emails from database.

--- a/views/report.ejs
+++ b/views/report.ejs
@@ -9,13 +9,7 @@
 	<form action="/report" method="post" style="margin: 3% 10% 0 10%">
 		<div>
 			<input class="form-control mr-sm-2" type="text" placeholder="Who are you going to report ?" aria-label="Search" list="userDropdown" name="bluser">
-			<datalist id="userDropdown">
-				<option value="Alex">Alex</option>
-				<option value="Romario">Romario</option>
-				<option value="Sam">Sam</option>
-				<option value="Vincent">Vincent</option>
-				<option value="Winson">Winson</option>
-			</datalist>
+                        <%- datalist %>
 		</div>
 		<!-- end of Search -->
 
