--- a/views/report.ejs
+++ b/views/report.ejs
@@ -8,7 +8,7 @@
 
 	<form action="/report" method="post" style="margin: 3% 10% 0 10%">
 		<div>
-			<input class="form-control mr-sm-2" type="text" placeholder="Who are you going to report ?" aria-label="Search" list="userDropdown" name="bluser">
+			<input class="form-control mr-sm-2" type="text" placeholder="Who are you going to report ?" aria-label="Search" list="userDropdown" name="bluser" required>
                         <%- datalist %>
 		</div>
 		<!-- end of Search -->
