profile: Really fix issue #10.
Follow up of ad59a99c6409c0175f13568eedd6e2fc3d449ab2.

--- a/views/ProfilePage.ejs
+++ b/views/ProfilePage.ejs
@@ -15,10 +15,11 @@
             <div class="col-xs-12 col-sm-6 col-md-6">
                 <div class="well well-sm">
                     <div class="row">
-                        <div class="media">
+                        <div class="media"
+                             style="height:300px; width: 200px;">
                             <img class="img-thumbnail" src="<%= imgfile %>
                             <%# /thumbnail-images/Profile-avatar-placeholder-large.png %>
-                            " style="height:300px; width: 200px;"
+                            " style="height: 100%; width: 100%; object-fit: contain"
                                 alt="Generic placeholder image" />
                             <div class="media-body">
 
