add source info

--- a/views/chatroom.ejs
+++ b/views/chatroom.ejs
@@ -1,3 +1,5 @@
+<%# Source: https://github.com/mmukhin/psitsmike_example_2 %>
+
 <%- include header.ejs %>
 
 <p id="idid" style="display:none"><%= emailid %></p>
