--- a/views/matches.ejs
+++ b/views/matches.ejs
@@ -33,6 +33,20 @@
         <%- table %>
     </main>
 
+    <a href="" data-jslicense="1"></a>
+    <table id="jslicense-labels1" hidden>
+        <tr>
+            <td><a href="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js">popper.min.js</a></td>
+            <td><a href="magnet:?xt=urn:btih:d3d9a9a6595521f9666a5e94cc830dab83b65699&dn=expat.txt">Expat</a></td>
+            <td><a href="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.js">popper.js</a></td>
+        </tr>
+        <tr>
+            <td><a href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js">bootstrap.min.js</a></td>
+            <td><a href="magnet:?xt=urn:btih:d3d9a9a6595521f9666a5e94cc830dab83b65699&dn=expat.txt">Expat</a></td>
+            <td><a href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.js">bootstrap.js</a></td>
+        </tr>
+    </table>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
