--- a/views/matches.ejs
+++ b/views/matches.ejs
@@ -27,12 +27,14 @@
 <%- include header.ejs %>
 
 <body>
+    <!-- Content of this page.  -->
     <main role="main" class="container">
         <p class="lead"></p>
         <h1>Matches</h1>
         <%- table %>
     </main>
 
+    <!-- License of used ecmascripts.  -->
     <a href="" data-jslicense="1"></a>
     <table id="jslicense-labels1" hidden>
         <tr>
@@ -47,6 +49,7 @@
         </tr>
     </table>
 
+    <!-- Ecmascripts needed for this page.  -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
